--- a/css/style.css
+++ b/css/style.css
@@ -55,15 +55,17 @@ footer li {
   padding: 15px 5px;
   font-size: 30px;
 }
-/* My UX Skills Section */
+/* My UX Skills Section coded using CSS flex */
 .flexContainer {
   display: flex;
   padding: 60px 30px;
+  flex-direction: row;
 }
 .flexContainer div {
   width: 33%;
   padding: 25px;
 }
+
 
 /* My Work Section */
 .myWork {
